--- a/package.json
+++ b/package.json
@@ -6,10 +6,16 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "moment": "^2.29.1",
+    "rbc-fork-react-big-calendar": "^0.33.10",
     "react": "^17.0.2",
+    "react-big-calendar": "^0.38.2",
+    "react-datetime-picker": "^3.4.3",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.14.4",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "sass": "^1.45.2",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
