--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "react-datetime-picker": "^3.4.3",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.4",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "sass": "^1.45.2",
+    "sweetalert2": "^11.3.3",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
